# dt240x320

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  esp-prog.cfg  font.py  sdkconfig
README/: .menu.md.swp  menu.md  saves.md
images/: enemy.xcf
images/flappy_bird/: flappy_background.c  flappy_background.h  main.xcf
main/: .arkanoid.h.swp  .main.c.swp  CMakeLists.txt  arkanoid.c  arkanoid.h  arkanoid_preview.c  arkanoid_preview.h  background.h  backup_sonic.c  backup_sonic2.c  backup_sonic3.c  backup_sonic4.c  backup_sonic5.c  backup_sonic6.c  backup_sonic7.c  button.h  button.patch  button_reverse.patch  dacha.c  dacha.h  def_image.c  display.c  display.h  doodle.c  doodle.h  doodle_hero.c  doodle_hero.h  doodle_preview.h  fighter1.c  fighter1.h  fighter2.c  fighter2.h  fighter_move1.c  fighter_move2.h  fighter_move3.h  fighter_move4.h  fighter_shot1.h  fighter_shot2.c  fighter_stay1.c  flappy.c  (+45 more)
main/core/: button.c  button.h  button.patch  display.c  display.h  font.c  font.h  saves.c  spi.c
main/images/: arkanoid_preview.h  background.c  background.h  dacha.c  dacha.h  dacha_car.c  dacha_car.h  dacha_evening.c  dacha_evening.h  dacha_preview.c  dacha_preview.h  doodle_hero.h  doodle_preview.c  doodle_preview.h  fighter_move1.h  fighter_move2.c  fighter_move2.h  fighter_move3.c  fighter_move3.h  fighter_move4.c  fighter_move4.h  fighter_move5.c  fighter_move5.h  fighter_shot1.c  fighter_shot1.h  fighter_shot2.h  fighter_stay1.h  flappy_background.c  flappy_down.c  flappy_down.h  flappy_ground.c  flappy_ground.h  flappy_mid.c  flappy_mid.h  flappy_pipe.c  flappy_pipe.h  flappy_pipe_up.c  flappy_pipe_up.h  flappy_preview.c  flappy_preview.h  (+21 more)
scripts/: flash_esp32.sh
