idf_component_register(SRCS "main.c"
                       SRCS "menu.c"
                       SRCS "button.c"
                       SRCS "display.c"
                       SRCS "physics.c"
                       SRCS "font.c"
                       SRCS "spi.c"
                       SRCS "saves.c"
                       SRCS "pong.c"
                       SRCS "doodle.c"
                       SRCS "doodle_hero.c"
                       SRCS "platform.c"
                       SRCS "pong_preview.c"
                       SRCS "doodle_preview.c"
                       SRCS "arkanoid_preview.c"
                       SRCS "arkanoid.c"
					   SRCS "sonic.c"
					   SRCS "sonic1.c"
					   SRCS "sonic2.c"
                       SRCS "sonic3.c"
                       SRCS "sonic4.c"
                       SRCS "sonic5.c"
                       SRCS "sonic6.c"
                    INCLUDE_DIRS ".")
