idf_component_register(SRCS "main.c"
                       SRCS "menu.c"
                       SRCS "button.c"
                       SRCS "display.c"
                       SRCS "physics.c"
                       SRCS "font.c"
                       SRCS "spi.c"
                       SRCS "saves.c"
                       SRCS "pong.c"
                       SRCS "doodle.c"
                       SRCS "doodle_hero.c"
                       SRCS "platform.c"
                       SRCS "platform_blue.c"
                       SRCS "platform_white.c"
                       SRCS "pong_preview.c"
                       SRCS "doodle_preview.c"
                       SRCS "arkanoid_preview.c"
                       SRCS "arkanoid.c"
					   SRCS "sonic.c"
					   SRCS "sonic1.c"
					   SRCS "sonic2.c"
                       SRCS "sonic3.c"
                       SRCS "sonic4.c"
                       SRCS "sonic5.c"
                       SRCS "sonic6.c"
					   SRCS "fighter1.c"
					   SRCS "fighter2.c"
					   SRCS "pikachu1.c"
					   SRCS "pikachu2.c"
                    INCLUDE_DIRS ".")
