idf_component_register(SRCS "main.c"
                       SRCS "menu.c"
                       SRCS "core/button.c"
                       SRCS "core/display.c"
                       SRCS "core/physics.c"
                       SRCS "core/font.c"
                       SRCS "core/spi.c"
                       SRCS "core/saves.c"
                       SRCS "pong.c"
                       SRCS "doodle.c"
                       SRCS "images/doodle_hero.c"
                       SRCS "images/platform.c"
                       SRCS "images/platform_blue.c"
                       SRCS "images/platform_white.c"
                       SRCS "images/pong_preview.c"
                       SRCS "images/doodle_preview.c"
                       SRCS "images/arkanoid_preview.c"
                       SRCS "images/flappy_preview.c"
                       SRCS "images/flappy_ground.c"
                       SRCS "images/flappy_up.c"
                       SRCS "images/flappy_mid.c"
                       SRCS "images/flappy_down.c"
                       SRCS "images/flappy_pipe.c"
                       SRCS "images/flappy_pipe_up.c"
                       SRCS "arkanoid.c"
                       SRCS "flappy.c"
                       SRCS "dacha.c"
					   SRCS "sonic.c"
					   SRCS "images/sonic1.c"
					   SRCS "images/sonic2.c"
                       SRCS "images/sonic3.c"
                       SRCS "images/sonic4.c"
                       SRCS "images/sonic5.c"
                       SRCS "images/sonic6.c"
					   SRCS "images/fighter_shot1.c"
					   SRCS "images/fighter_shot2.c"
					   SRCS "images/pikachu1.c"
					   SRCS "images/pikachu2.c"
					   SRCS "images/background.c"
					   SRCS "images/fighter_move1.c"
                       SRCS "images/fighter_move2.c"
                       SRCS "images/fighter_move3.c"
                       SRCS "images/fighter_move4.c"
                       SRCS "images/fighter_move5.c"
					   SRCS "images/fighter_stay1.c"
                    INCLUDE_DIRS ".")
